--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ionic-native/camera": "^5.0.0-beta.22",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/globalization": "^5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
@@ -29,6 +30,7 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "cordova-android": "7.1.4",
+    "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-globalization": "1.11.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -79,7 +81,8 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-globalization": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android"
